--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -47,11 +47,20 @@
     </header>
 
 
-    <div class="row">
-        <h1 class="col font-monospace">Hello, world!</h1>
-        <h2 class="col text-decoration-underline">Lorem ipsum dolor sit.</h2>
-        <h3 class="col">Lorem ipsum dolor sit.</h3>
-    </div>
+    <main class="main">
+        <h1>Contacto</h1>
+        <div class="contacto">
+            <img src="../resources/imagenes/contacto.jpg" alt="casa de campo eventos">
+            <section class="formulario">
+                <form action="#" method="get" enctype="text/plain">
+                    <input type="text" placeholder="Nombre y apellido" name="">
+                    <input type="email" placeholder="gabriel@gmail.com" name="correo-electronico">
+                    <input type="text" placeholder="Dejanos tu consulta" name="consulta">
+                    <input type="submit" value="Enviar">
+            </section>
+        </div>
+        </form>
+    </main>
 
 
     <footer class="footer">
