--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -47,18 +47,24 @@
     </header>
 
 
-    <main class="main">
-        <h1>Contacto</h1>
-        <div class="contacto">
-            <img src="../resources/imagenes/contacto.jpg" alt="casa de campo eventos">
-            <section class="formulario">
-                <form action="#" method="get" enctype="text/plain">
-                    <input type="text" placeholder="Nombre y apellido" name="">
-                    <input type="email" placeholder="gabriel@gmail.com" name="correo-electronico">
-                    <input type="text" placeholder="Dejanos tu consulta" name="consulta">
-                    <input type="submit" value="Enviar">
-            </section>
-        </div>
+    <main class="main-news">
+        <section>
+            <div>
+                <h1 class="h1-contacto">Contacto</h1>
+            </div>
+        </section>
+        <section class="contacto">
+            <div>
+                <form action="#" method="get" enctype="text/plain"></div>
+                    <div class="formulario">
+                        <div><input type="text" placeholder="Nombre y apellido" name=""></div>
+                        <div><input type="email" placeholder="gabriel@gmail.com" name="correo-electronico"></div>
+                        <div><input type="text" placeholder="Dejanos tu consulta" name="consulta"></div>
+                        <div> <input type="submit" value="Enviar"></div>
+                    </div>
+                </form>
+            </div>
+        </section>
         </form>
     </main>
 
